removed bg.jpg and fixed broken navbar collapse

--- a/app/assets/stylesheets/css/stylish-portfolio.css
+++ b/app/assets/stylesheets/css/stylish-portfolio.css
@@ -33,14 +33,14 @@ body {
 
 .btn-dark {
     border-radius: 0;
-    color: #fff;
+    color: white;
     background-color: rgba(0,0,0,0.4);
 }
 
 .btn-dark:hover,
 .btn-dark:focus,
 .btn-dark:active {
-    color: #fff;
+    color: white;
     background-color: rgba(0,0,0,0.7);
 }
 
@@ -155,7 +155,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg.jpg) no-repeat center center scroll;
+    /*background: url(../img/bg.jpg) no-repeat center center scroll;*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
