--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,12 +2,9 @@
 @import "bootstrap";
 @import "media-queries";
 
-.well {
-   background-color: rgba(245, 245, 245, 0.7);
-}
 
 #map {
-    width: 600px;
+    width: 500px;
     height: 400px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -25,15 +22,21 @@
 @media screen and (max-width: 480px)  {
 	#map {
 		margin: auto;
-		width: 350px;
+		width: 225px;
     	height: 300px;
-    	margin-bottom: 10px;
+    	margin-top: -50px;
 	}
 	h3 {
 		text-align: center;
 	}
 	#sidebar_container {
 	margin: auto;
-	width: 300;
+	width: auto;
 	}
+}
+
+.navbar .in .nav li {
+   display: block;
+   float: none;
+   width:100%;
 }
